<resources>
    <string name="app_name">AS_POINTER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AS-Pointer</string>
    <string name="nav_header_subtitle">Accident Prone Spot Locator </string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Map</string>
    <string name="menu_accidentinfo">Accident Spots</string>
    <string name="menu_about">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_help">Help</string>

    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>

    <string name="description">Accident Spot Prone Locator application integrated with google map
        that helps in identifying accident prone area called as Blackspot. Whenever you plan to travel,
        start the navigation on google map and open the app or if you know the route just open AS-Pointer app.
        It will keep running while you drive towards your destination. As soon as you are within 300 meters range
        of any spot that is accident prone area this application will give a voice message to you also if your speed
        is greater than safe speed of that spot. This application will give a voice message to you, so that you are extra
        watchful about accident prone area.
    </string>
    <string name="description2">
    If AS-Pointer app is not working or some error in running then check in
   Mobile Settings->Application->Application Manager->AS-POINTER->Permissions->allow all permission..then check again..</string>

    <string name="help_text">Accident prone Spot Locator application integrated with Google map that helps in identifying accident prone
        spots and provide voice alert.Whenever you plan to travel,start the navigation on Google map and open the app,
        it will keep running while you drive towards the destination.
        As soon as you are within 1km range of any spot that is Accident prone area this application will give a voice alert.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="GoogleKey">AIzaSyDPhDKdAeXEWMBEun4GHmQbgsbS2bCDgCs </string>

<!--    map strings-->
    <string name="hue">Hue</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string name="normal"> Normal</string>
    <string name="satellite" >Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="buildings">Buildings</string>
    <string name="traffic">Traffic</string>
    <string name="my_location">My Location</string>
    <string name="none_map">None</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
