<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="Location" />
        <item
            android:id="@+id/nav_spots"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_accidentinfo" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/menu_help"
             />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/menu_about"
                 />

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/menu_contact" />
        </menu>
    </item>

</menu>
